Modificaciones en todas las calificaciones  se incluye evidencia de salvedad
Se agregan en las captura campos para evidencia de salvedad (bandera y
observación) , antes se llevo a cabo la modificaión de tablas y
posteriormente la modificación en los reportes

--- a/TableroSLAs/IncidenteDetalle2.html
+++ b/TableroSLAs/IncidenteDetalle2.html
@@ -1004,6 +1004,20 @@ jQuery(function ($) {
                           <td><input type="hidden" id="mc_calificacion_incidenteFechaUltMod" value="{FechaUltMod}" name="{FechaUltMod_Name}">{lblFechaUltMod}</td>
                         </tr>
  
+                        <tr class="Controls">
+                          <td class="th">
+                            <p>&nbsp;<label for="mc_calificacion_incidenteevidencia_salvedad_TA" style="display: block;">Evidencia de salvedad <br>
+                            - Tiempo de atención</label><input type="checkbox" id="mc_calificacion_incidenteevidencia_salvedad_TA_TA" value="1" name="{evidencia_salvedad_TA_Name}" {evidencia_salvedad_TA}></p>
+                          </td> 
+                          <td>&nbsp;<label for="mc_calificacion_incidenteobservacion_salvedad_TA" style="display: block;">Observaciones de evidencia de salvedad - Tiempo de atención </label>&nbsp; <textarea id="mc_calificacion_incidenteobservacion_salvedad_TA_TA" rows="3" cols="50" name="{observacion_salvedad_TA_Name}">{observacion_salvedad_TA}</textarea></td>
+                        </tr>
+ 
+                        <tr class="Controls">
+                          <td class="th">&nbsp;<label for="mc_calificacion_incidenteevidencia_salvedad_TS" style="display: block;">Evidencia de salvedad <br>
+                            - Tiempo de solución</label><input type="checkbox" id="mc_calificacion_incidenteevidencia_salvedad_TS" value="1" name="{evidencia_salvedad_TS_Name}" {evidencia_salvedad_TS}></td> 
+                          <td>&nbsp;<label for="mc_calificacion_incidenteobservacion_salvedad_TS" style="display: block;">Observación de evidencia de salvedad - Tiempo de solución</label> <textarea id="mc_calificacion_incidenteobservacion_salvedad_TS" rows="3" cols="60" name="{observacion_salvedad_TS_Name}">{observacion_salvedad_TS}</textarea></td>
+                        </tr>
+ 
                         <tr class="Bottom">
                           <td style="FONT-WEIGHT: bolder; TEXT-ALIGN: right" colspan="2"><label for="mc_calificacion_incidenteshUsuarioAlta" style="display: none;">&nbsp;</label><input type="hidden" id="mc_calificacion_incidenteshUsuarioAlta" style="HEIGHT: 22px; WIDTH: 78px" size="3" value="{shUsuarioAlta}" name="{shUsuarioAlta_Name}"><input type="hidden" id="mc_calificacion_incidenteshTiempoSoporte" style="HEIGHT: 22px; WIDTH: 38px" size="1" value="{shTiempoSoporte}" name="{shTiempoSoporte_Name}"><input type="hidden" id="mc_calificacion_incidenteshTiempoSolucion" style="HEIGHT: 22px; WIDTH: 34px" size="1" value="{shTiempoSolucion}" name="{shTiempoSolucion_Name}"><input type="hidden" id="mc_calificacion_incidenteshTiempoAtencion" style="HEIGHT: 22px; WIDTH: 40px" size="1" value="{shTiempoAtencion}" name="{shTiempoAtencion_Name}"><input type="hidden" id="mc_calificacion_incidenteshIdProveedor" style="HEIGHT: 22px; WIDTH: 48px" size="1" value="{shIdProveedor}" name="{shIdProveedor_Name}"><input type="hidden" id="mc_calificacion_incidenteshAnio" style="HEIGHT: 22px; WIDTH: 58px" size="1" value="{shAnio}" name="{shAnio_Name}"><input type="hidden" id="mc_calificacion_incidenteshMes" style="HEIGHT: 22px; WIDTH: 42px" size="1" value="{shMes}" name="{shMes_Name}"><input type="hidden" id="mc_calificacion_incidenteshDescartar" style="HEIGHT: 22px; WIDTH: 66px" size="1" value="{shDescartar}" name="{shDescartar_Name}"><input type="hidden" id="mc_calificacion_incidenteshId_Incidente" style="HEIGHT: 22px; WIDTH: 55px" size="1" value="{shId_Incidente}" name="{shId_Incidente_Name}">&nbsp;</td>
                         </tr>
