--- a/TableroSLAs/PPMCsApbDetalle2.html
+++ b/TableroSLAs/PPMCsApbDetalle2.html
@@ -1151,6 +1151,20 @@ jQuery(function ($) {
                   <td>&nbsp;<input type="hidden" id="mc_info_rs_ap_EChdUsrUltMod" value="{hdUsrUltMod}" name="{hdUsrUltMod_Name}"><label for="mc_info_rs_ap_EChdFechaUltMod" style="display: none;">hdFechaUltMod</label><input type="hidden" id="mc_info_rs_ap_EChdFechaUltMod" value="{hdFechaUltMod}" name="{hdFechaUltMod_Name}"></td>
                 </tr>
  
+                <tr class="Controls">
+                  <td class="th">&nbsp;Evidencia de Salvedad Herramienta Estimación&nbsp;<input type="checkbox" id="mc_info_rs_ap_ECev_salvedad_HE" value="1" name="{ev_salvedad_HE_Name}" {ev_salvedad_HE}></td> 
+                  <td>
+                    <p><label for="mc_info_rs_ap_ECobservaciones_salvedad_HE" style="display: block;">Observaciones</label> <textarea id="mc_info_rs_ap_ECobservacion_salvedad_HE" rows="6" cols="50" name="{observacion_salvedad_HE_Name}">{observacion_salvedad_HE}</textarea></p>
+                  </td>
+                </tr>
+ 
+                <tr class="Controls">
+                  <td class="th">&nbsp;Evidencia de Salvedad Requisitos de Servicio&nbsp;<input type="checkbox" id="mc_info_rs_ap_ECev_salvedad_RS" value="1" name="{ev_salvedad_RS_Name}" {ev_salvedad_RS}></td> 
+                  <td>
+                    <p><label for="mc_info_rs_ap_ECobservaciones_salvedad_RS" style="display: block;">Observaciones</label> <textarea id="mc_info_rs_ap_ECobservaciones_salvedad_RS" rows="6" cols="50" name="{observaciones_salvedad_RS_Name}">{observaciones_salvedad_RS}</textarea></p>
+                  </td>
+                </tr>
+ 
                 <tr class="Bottom">
                   <td><input type="hidden" id="mc_info_rs_ap_ECsID" value="{sID}" name="{sID_Name}"><input type="hidden" id="mc_info_rs_ap_EChdUsrAlta" value="{hdUsrAlta}" name="{hdUsrAlta_Name}">
                     <!-- BEGIN Button btnCalcular --><input type="button" id="mc_info_rs_ap_ECbtnCalcular" class="Button" alt="Calcular" value="Calcular" name="{Button_Name}"><!-- END Button btnCalcular -->{DatosUltMod}</td> 
