--- a/TableroSLAs/PPMCsCrbCalidad.html
+++ b/TableroSLAs/PPMCsCrbCalidad.html
@@ -90,10 +90,10 @@ function calculaSLA(){
     <td>&nbsp; 
       <!-- BEGIN Record mc_info_rs_cr_calidad -->
       <form id="mc_info_rs_cr_calidad" method="post" name="{HTMLFormName}" action="{Action}">
-        <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
+        <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
           <tr>
             <td valign="top">
-              <table class="Header" border="0" cellspacing="0" cellpadding="0">
+              <table class="Header" cellspacing="0" cellpadding="0" border="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                   <td class="th"><strong>Calificar calidad de productos terminados</strong>{lReportado}</td> 
@@ -133,30 +133,30 @@ function calculaSLA(){
  
                 <tr class="Controls">
                   <td class="th"><label for="mc_info_rs_cr_calidadRechazosDocAVL">Rechazos documentales</label></td> 
-                  <td><input type="text" id="mc_info_rs_cr_calidadRechazosDocAVL" value="{RechazosDocAVL}" maxlength="3" size="3" name="{RechazosDocAVL_Name}"></td> 
+                  <td><input type="text" id="mc_info_rs_cr_calidadRechazosDocAVL" maxlength="3" size="3" value="{RechazosDocAVL}" name="{RechazosDocAVL_Name}"></td> 
                   <td class="th"><label for="mc_info_rs_cr_calidadRechazosFunAVL">Rechazos funcionales&nbsp;AVL</label>&nbsp;</td> 
-                  <td class="th"><input type="text" id="mc_info_rs_cr_calidadRechazosFunAVL" value="{RechazosFunAVL}" maxlength="3" size="3" name="{RechazosFunAVL_Name}"></td>
+                  <td class="th"><input type="text" id="mc_info_rs_cr_calidadRechazosFunAVL" maxlength="3" size="3" value="{RechazosFunAVL}" name="{RechazosFunAVL_Name}"></td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th"><label for="mc_info_rs_cr_calidadHallazgosDocQC">Hallazgos documentales</label></td> 
-                  <td><input type="text" id="mc_info_rs_cr_calidadHallazgosDocQC" value="{HallazgosDocQC}" maxlength="3" size="3" name="{HallazgosDocQC_Name}"></td> 
+                  <td><input type="text" id="mc_info_rs_cr_calidadHallazgosDocQC" maxlength="3" size="3" value="{HallazgosDocQC}" name="{HallazgosDocQC_Name}"></td> 
                   <td class="th"><label for="mc_info_rs_cr_calidadDefectosQC">Relación defectos QC / casos de prueba</label></td> 
-                  <td class="th"><input type="text" id="mc_info_rs_cr_calidadDefectosQC" value="{DefectosQC}" maxlength="3" size="3" name="{DefectosQC_Name}">/<input type="text" id="mc_info_rs_cr_calidadCasosdePrueba" onchange="calculaSLA()" value="{CasosdePrueba}" maxlength="3" size="3" name="{CasosdePrueba_Name}">=<span id="PctDefectosCasos">&nbsp;</span>%=<input type="text" id="mc_info_rs_cr_calidadTotalDefectos" value="{TotalDefectos}" maxlength="3" size="3" name="{TotalDefectos_Name}"></td>
+                  <td class="th"><input type="text" id="mc_info_rs_cr_calidadDefectosQC" maxlength="3" size="3" value="{DefectosQC}" name="{DefectosQC_Name}">/<input type="text" onchange="calculaSLA()" id="mc_info_rs_cr_calidadCasosdePrueba" maxlength="3" size="3" value="{CasosdePrueba}" name="{CasosdePrueba_Name}">=<span id="PctDefectosCasos">&nbsp;</span>%=<input type="text" id="mc_info_rs_cr_calidadTotalDefectos" maxlength="3" size="3" value="{TotalDefectos}" name="{TotalDefectos_Name}"></td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th"><label for="mc_info_rs_cr_calidadIndiceCalidadDoc">Indice calidad documental</label></td> 
-                  <td><input type="text" id="mc_info_rs_cr_calidadIndiceCalidadDoc" value="{IndiceCalidadDoc}" maxlength="3" size="3" name="{IndiceCalidadDoc_Name}"></td> 
+                  <td><input type="text" id="mc_info_rs_cr_calidadIndiceCalidadDoc" maxlength="3" size="3" value="{IndiceCalidadDoc}" name="{IndiceCalidadDoc_Name}"></td> 
                   <td class="th"><label for="mc_info_rs_cr_calidadTotalDefectos"><label for="mc_info_rs_cr_calidadIndiceCalidadFun">Indice calidad funcional</label><font style="BACKGROUND-COLOR: rgb(232,232,232)">&nbsp;</font></label></td> 
-                  <td class="th"><input type="text" id="mc_info_rs_cr_calidadIndiceCalidadFun" value="{IndiceCalidadFun}" maxlength="3" size="3" name="{IndiceCalidadFun_Name}"></td>
+                  <td class="th"><input type="text" id="mc_info_rs_cr_calidadIndiceCalidadFun" maxlength="3" size="3" value="{IndiceCalidadFun}" name="{IndiceCalidadFun_Name}"></td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th"><label for="mc_info_rs_cr_calidadDeductivaDoc">Deductiva documental</label></td> 
-                  <td><input type="text" id="mc_info_rs_cr_calidadDeductivaDoc" value="{DeductivaDoc}" maxlength="3" size="3" name="{DeductivaDoc_Name}"></td> 
+                  <td><input type="text" id="mc_info_rs_cr_calidadDeductivaDoc" maxlength="3" size="3" value="{DeductivaDoc}" name="{DeductivaDoc_Name}"></td> 
                   <td class="th"><label for="mc_info_rs_cr_calidadTotalDefectos"><font style="BACKGROUND-COLOR: rgb(232,232,232)"><label for="mc_info_rs_cr_calidadDeductivaFun">Deductiva funcional</label></font></label></td> 
-                  <td class="th"><input type="text" id="mc_info_rs_cr_calidadDeductivaFun" value="{DeductivaFun}" maxlength="3" size="3" name="{DeductivaFun_Name}"></td>
+                  <td class="th"><input type="text" id="mc_info_rs_cr_calidadDeductivaFun" maxlength="3" size="3" value="{DeductivaFun}" name="{DeductivaFun_Name}"></td>
                 </tr>
  
                 <tr class="Controls">
@@ -168,7 +168,7 @@ function calculaSLA(){
                     </select>
  </td> 
                   <td class="th">Deductiva total</td> 
-                  <td class="th"><input type="text" id="mc_info_rs_cr_calidadDeductivaTot" value="{DeductivaTot}" maxlength="3" size="3" name="{DeductivaTot_Name}"></td>
+                  <td class="th"><input type="text" id="mc_info_rs_cr_calidadDeductivaTot" maxlength="3" size="3" value="{DeductivaTot}" name="{DeductivaTot_Name}"></td>
                 </tr>
  
                 <tr class="Controls">
@@ -176,12 +176,17 @@ function calculaSLA(){
                   <td colspan="3"><textarea id="mc_info_rs_cr_calidadObservaciones" rows="3" cols="50" name="{Observaciones_Name}">{Observaciones}</textarea></td>
                 </tr>
  
+                <tr class="Controls">
+                  <td class="th"><label for="mc_info_rs_cr_calidadevidencia_salvedad" style="display: block;">Evidencia de </br>Salvedad </label><input type="checkbox" id="mc_info_rs_cr_calidadevidencia_salvedad" value="1" name="{evidencia_salvedad_Name}" {evidencia_salvedad}></td> 
+                  <td colspan="3">&nbsp;<label for="mc_info_rs_cr_calidadobservacion_salvedad" style="display: block;">Observaciones de evidencia de salvedad</label> <textarea id="mc_info_rs_cr_calidadobservacion_salvedad" rows="3" cols="60" name="{observacion_salvedad_Name}">{observacion_salvedad}</textarea></td>
+                </tr>
+ 
                 <tr class="Bottom">
                   <td>
-                    <!-- BEGIN Button btnCalcula --><input type="submit" id="mc_info_rs_cr_calidadbtnCalcula" class="Button" value="Recalcular y guardar" alt="Button1" name="{Button_Name}" size="20"><!-- END Button btnCalcula --></td> 
+                    <!-- BEGIN Button btnCalcula --><input type="submit" id="mc_info_rs_cr_calidadbtnCalcula" class="Button" alt="Button1" value="Recalcular y guardar" name="{Button_Name}" size="20"><!-- END Button btnCalcula --></td> 
                   <td style="TEXT-ALIGN: right" colspan="3">
-                    <!-- BEGIN Button Button_Insert --><input type="submit" id="mc_info_rs_cr_calidadButton_Insert" class="Button" value="Agregar" alt="Agregar" name="{Button_Name}"><!-- END Button Button_Insert -->
-                    <!-- BEGIN Button Button_Update --><input type="submit" id="mc_info_rs_cr_calidadButton_Update" class="Button" value="Enviar" alt="Enviar" name="{Button_Name}"><!-- END Button Button_Update --><input type="hidden" id="mc_info_rs_cr_calidadUsuarioUltMod" value="{UsuarioUltMod}" name="{UsuarioUltMod_Name}"><label for="mc_info_rs_cr_calidadFechaUltMod" style="display: none;">Fcha Ult Mod</label><input type="hidden" id="mc_info_rs_cr_calidadFechaUltMod" value="{FechaUltMod}" name="{FechaUltMod_Name}"><input type="hidden" id="mc_info_rs_cr_calidadhdId" value="{hdId}" name="{hdId_Name}"></td>
+                    <!-- BEGIN Button Button_Insert --><input type="submit" id="mc_info_rs_cr_calidadButton_Insert" class="Button" alt="Agregar" value="Agregar" name="{Button_Name}"><!-- END Button Button_Insert -->
+                    <!-- BEGIN Button Button_Update --><input type="submit" id="mc_info_rs_cr_calidadButton_Update" class="Button" alt="Enviar" value="Enviar" name="{Button_Name}"><!-- END Button Button_Update --><input type="hidden" id="mc_info_rs_cr_calidadUsuarioUltMod" value="{UsuarioUltMod}" name="{UsuarioUltMod_Name}"><label for="mc_info_rs_cr_calidadFechaUltMod" style="display: none;">Fcha Ult Mod</label><input type="hidden" id="mc_info_rs_cr_calidadFechaUltMod" value="{FechaUltMod}" name="{FechaUltMod_Name}"><input type="hidden" id="mc_info_rs_cr_calidadhdId" value="{hdId}" name="{hdId_Name}"></td>
                 </tr>
               </table>
             </td>
@@ -198,10 +203,10 @@ function calculaSLA(){
       <!-- BEGIN EditableGrid EditableGrid1 -->
       <form id="EditableGrid1" method="post" name="{HTMLFormName}" action="{Action}">
         <input type="hidden" value="{FormState}" name="FormState">{FormScript} 
-        <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
+        <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
           <tr>
             <td valign="top">
-              <table class="Header" border="0" cellspacing="0" cellpadding="0">
+              <table class="Header" cellspacing="0" cellpadding="0" border="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                   <td class="th"><strong>Detalle de rechazos</strong></td> 
@@ -268,7 +273,7 @@ function calculaSLA(){
                     <!-- BEGIN Next_Off --><img alt="{Next_URL}" src="Styles/{CCS_Style}/Images/NextOff.gif"><!-- END Next_Off -->
                     <!-- BEGIN Last_On --><a href="{Last_URL}"><img alt="{Last_URL}" src="Styles/{CCS_Style}/Images/Last.gif"></a> <!-- END Last_On -->
                     <!-- BEGIN Last_Off --><img alt="{Last_URL}" src="Styles/{CCS_Style}/Images/LastOff.gif"><!-- END Last_Off --></span><!-- END Navigator Navigator -->
-                    <!-- BEGIN Button Button_Submit --><input type="submit" id="EditableGrid1Button_Submit" class="Button" value="Enviar" alt="Enviar" name="{Button_Name}"><!-- END Button Button_Submit --></td>
+                    <!-- BEGIN Button Button_Submit --><input type="submit" id="EditableGrid1Button_Submit" class="Button" alt="Enviar" value="Enviar" name="{Button_Name}"><!-- END Button Button_Submit --></td>
                 </tr>
               </table>
             </td>
@@ -290,10 +295,10 @@ function calculaSLA(){
       <form id="mc_info_detalle_hallazgos" method="post" name="{HTMLFormName}" action="{Action}">
         <p><input type="hidden" value="{FormState}" name="FormState">{FormScript} </p>
  
-        <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
+        <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
           <tr>
             <td valign="top">
-              <table class="Header" border="0" cellspacing="0" cellpadding="0">
+              <table class="Header" cellspacing="0" cellpadding="0" border="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                   <td class="th"><strong>Lista de hallazgos</strong></td> 
@@ -387,7 +392,7 @@ function calculaSLA(){
                     <!-- BEGIN Next_Off --><img alt="{Next_URL}" src="Styles/{CCS_Style}/Images/NextOff.gif"><!-- END Next_Off -->
                     <!-- BEGIN Last_On --><a href="{Last_URL}"><img alt="{Last_URL}" src="Styles/{CCS_Style}/Images/Last.gif"></a> <!-- END Last_On -->
                     <!-- BEGIN Last_Off --><img alt="{Last_URL}" src="Styles/{CCS_Style}/Images/LastOff.gif"><!-- END Last_Off --></span><!-- END Navigator Navigator -->
-                    <!-- BEGIN Button Button_Submit --><input type="submit" id="mc_info_detalle_hallazgosButton_Submit" class="Button" value="Guardar" alt="Enviar" name="{Button_Name}" size="20"><!-- END Button Button_Submit --></td>
+                    <!-- BEGIN Button Button_Submit --><input type="submit" id="mc_info_detalle_hallazgosButton_Submit" class="Button" alt="Enviar" value="Guardar" name="{Button_Name}" size="20"><!-- END Button Button_Submit --></td>
                 </tr>
               </table>
             </td>
@@ -409,10 +414,10 @@ function calculaSLA(){
       <form id="mc_info_detalle_defectos" method="post" name="{HTMLFormName}" action="{Action}">
         <p><input type="hidden" value="{FormState}" name="FormState">{FormScript} </p>
  
-        <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
+        <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
           <tr>
             <td valign="top">
-              <table class="Header" border="0" cellspacing="0" cellpadding="0">
+              <table class="Header" cellspacing="0" cellpadding="0" border="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                   <td class="th"><strong>Lista de defectos</strong></td> 
@@ -503,7 +508,7 @@ function calculaSLA(){
                     <!-- BEGIN Next_Off --><img alt="{Next_URL}" src="Styles/{CCS_Style}/Images/NextOff.gif"><!-- END Next_Off -->
                     <!-- BEGIN Last_On --><a href="{Last_URL}"><img alt="{Last_URL}" src="Styles/{CCS_Style}/Images/Last.gif"></a> <!-- END Last_On -->
                     <!-- BEGIN Last_Off --><img alt="{Last_URL}" src="Styles/{CCS_Style}/Images/LastOff.gif"><!-- END Last_Off --></span><!-- END Navigator Navigator -->
-                    <!-- BEGIN Button Button_Submit --><input type="submit" id="mc_info_detalle_defectosButton_Submit" class="Button" value="Guardar" alt="Enviar" name="{Button_Name}" size="20"><!-- END Button Button_Submit --></td>
+                    <!-- BEGIN Button Button_Submit --><input type="submit" id="mc_info_detalle_defectosButton_Submit" class="Button" alt="Enviar" value="Guardar" name="{Button_Name}" size="20"><!-- END Button Button_Submit --></td>
                 </tr>
               </table>
             </td>
