--- a/TableroSLAs/PPMCsCrbCalidadCAPC.html
+++ b/TableroSLAs/PPMCsCrbCalidadCAPC.html
@@ -159,6 +159,12 @@
                   <td colspan="3"><textarea id="mc_info_rs_cr_calidad_capc_capcObservaciones" rows="3" cols="50" name="{Observaciones_Name}">{Observaciones}</textarea></td>
                 </tr>
  
+                <tr class="Controls">
+                  <td class="th">&nbsp;<label for="mc_info_rs_cr_calidad_capcevidencia_salvedad" style="display: block;">Evidencia de<br>
+                    Salvedad</label><input type="checkbox" id="mc_info_rs_cr_calidad_capcevidencia_salvedad" value="1" name="{evidencia_salvedad_Name}" {evidencia_salvedad}></td> 
+                  <td colspan="3">&nbsp;<label for="mc_info_rs_cr_calidad_capcobservacion_salvedad" style="display: block;">Observaciones de evidencia de salvedad</label> <textarea id="mc_info_rs_cr_calidad_capcobservacion_salvedad" rows="3" cols="50" name="{observacion_salvedad_Name}">{observacion_salvedad}</textarea></td>
+                </tr>
+ 
                 <tr class="Bottom">
                   <td>
                     <!-- BEGIN Button btnCalcula --><input type="submit" id="mc_info_rs_cr_calidad_capc_capcbtnCalcula" class="Button" alt="Calcular y Agregar" value="Calcular y Agregar " name="{Button_Name}" size="20"><!-- END Button btnCalcula -->
