--- a/TableroSLAs/SLAsCapcApbDetalle2.html
+++ b/TableroSLAs/SLAsCapcApbDetalle2.html
@@ -965,7 +965,7 @@ jQuery(function ($) {
  
                 <tr class="Controls">
                   <td class="th">&nbsp;SLO</td> 
-                  <td><label style="display: none;" for="mc_info_rs_ap_ECSLO">CheckBox1</label><input type="checkbox" id="mc_info_rs_ap_ECSLO" value="1" name="{SLO_Name}" {SLO}>&nbsp;</td>
+                  <td><label for="mc_info_rs_ap_ECSLO" style="display: none;">CheckBox1</label><input type="checkbox" id="mc_info_rs_ap_ECSLO" value="1" name="{SLO_Name}" {SLO}>&nbsp;</td>
                 </tr>
  
                 <tr class="Controls">
@@ -1004,7 +1004,7 @@ jQuery(function ($) {
  
                 <tr class="Controls">
                   <td class="th">PPMC&nbsp;padre</td> 
-                  <td><label style="display: inline;" for="mc_info_rs_ap_ECsDatosPadre">PPMC padre&nbsp;&nbsp; </label><input type="text" id="mc_info_rs_ap_ECsDatosPadre" maxlength="7" size="7" value="{sDatosPadre}" name="{sDatosPadre_Name}">&nbsp;&nbsp;&nbsp;<label style="display: inline;" for="mc_info_rs_ap_ECTipoPadre">Tipo padre:</label> 
+                  <td><label for="mc_info_rs_ap_ECsDatosPadre" style="display: inline;">PPMC padre&nbsp;&nbsp; </label><input type="text" id="mc_info_rs_ap_ECsDatosPadre" maxlength="7" size="7" value="{sDatosPadre}" name="{sDatosPadre_Name}">&nbsp;&nbsp;&nbsp;<label for="mc_info_rs_ap_ECTipoPadre" style="display: inline;">Tipo padre:</label> 
                     <select id="mc_info_rs_ap_ECTipoPadre" name="{TipoPadre_Name}">
                       <option selected value="">Seleccionar valor</option>
                       {TipoPadre_Options}
@@ -1034,37 +1034,37 @@ jQuery(function ($) {
  
                 <tr class="Controls">
                   <td class="th">&nbsp;</td> 
-                  <td><label style="display: inline;" for="mc_info_rs_ap_ECURLEvidencia">La URL de la evidencia de la herramienta de estimación es incorrecta</label><input type="checkbox" id="mc_info_rs_ap_ECURLEvidencia" value="1" name="{URLEvidencia_Name}" {URLEvidencia}></td>
+                  <td><label for="mc_info_rs_ap_ECURLEvidencia" style="display: inline;">La URL de la evidencia de la herramienta de estimación es incorrecta</label><input type="checkbox" id="mc_info_rs_ap_ECURLEvidencia" value="1" name="{URLEvidencia_Name}" {URLEvidencia}></td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th">&nbsp;</td> 
-                  <td><label style="display: inline;" for="mc_info_rs_ap_ECformatoEvidencia">El formato de la evidencia de la herramienta de estimación es incorrecto</label><input type="checkbox" id="mc_info_rs_ap_ECformatoEvidencia" value="1" name="{formatoEvidencia_Name}" {formatoEvidencia}>&nbsp;</td>
+                  <td><label for="mc_info_rs_ap_ECformatoEvidencia" style="display: inline;">El formato de la evidencia de la herramienta de estimación es incorrecto</label><input type="checkbox" id="mc_info_rs_ap_ECformatoEvidencia" value="1" name="{formatoEvidencia_Name}" {formatoEvidencia}>&nbsp;</td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th">&nbsp;</td> 
-                  <td><label style="display: inline;" for="mc_info_rs_ap_ECIDsCorrectos">Es&nbsp;incorrecto el Id PPMC en la evidencia de la herramienta de estimación</label><input type="checkbox" id="mc_info_rs_ap_ECIDsCorrectos" value="1" name="{IDsCorrectos_Name}" {IDsCorrectos}></td>
+                  <td><label for="mc_info_rs_ap_ECIDsCorrectos" style="display: inline;">Es&nbsp;incorrecto el Id PPMC en la evidencia de la herramienta de estimación</label><input type="checkbox" id="mc_info_rs_ap_ECIDsCorrectos" value="1" name="{IDsCorrectos_Name}" {IDsCorrectos}></td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th">&nbsp;</td> 
-                  <td>Sin evidencia de uso de herramienta de estimación&nbsp;<label style="display: none;" for="mc_info_rs_ap_ECSinEvidencia">CheckBox1</label><input type="checkbox" id="mc_info_rs_ap_ECSinEvidencia" value="1" name="{SinEvidencia_Name}" {SinEvidencia}></td>
+                  <td>Sin evidencia de uso de herramienta de estimación&nbsp;<label for="mc_info_rs_ap_ECSinEvidencia" style="display: none;">CheckBox1</label><input type="checkbox" id="mc_info_rs_ap_ECSinEvidencia" value="1" name="{SinEvidencia_Name}" {SinEvidencia}></td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th">&nbsp;</td> 
-                  <td>&nbsp;Sin Herramienta de estimación<label style="display: none;" for="mc_info_rs_ap_ECSinHerramienta">CheckBox1</label><input type="checkbox" id="mc_info_rs_ap_ECSinHerramienta" value="1" name="{SinHerramienta_Name}" {SinHerramienta}></td>
+                  <td>&nbsp;Sin Herramienta de estimación<label for="mc_info_rs_ap_ECSinHerramienta" style="display: none;">CheckBox1</label><input type="checkbox" id="mc_info_rs_ap_ECSinHerramienta" value="1" name="{SinHerramienta_Name}" {SinHerramienta}></td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th">&nbsp;</td> 
-                  <td>&nbsp;PPM Mal catálogado<label style="display: none;" for="mc_info_rs_ap_ECPPMMalCatalogado">CheckBox1</label><input type="checkbox" id="mc_info_rs_ap_ECPPMMalCatalogado" value="1" name="{PPMMalCatalogado_Name}" {PPMMalCatalogado}></td>
+                  <td>&nbsp;PPM Mal catálogado<label for="mc_info_rs_ap_ECPPMMalCatalogado" style="display: none;">CheckBox1</label><input type="checkbox" id="mc_info_rs_ap_ECPPMMalCatalogado" value="1" name="{PPMMalCatalogado_Name}" {PPMMalCatalogado}></td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th">&nbsp;</td> 
-                  <td>&nbsp;Estimación no aprobada<label style="display: none;" for="mc_info_rs_ap_ECEstNoAprobada">CheckBox1</label><input type="checkbox" id="mc_info_rs_ap_ECEstNoAprobada" value="1" name="{EstNoAprobada_Name}" {EstNoAprobada}></td>
+                  <td>&nbsp;Estimación no aprobada<label for="mc_info_rs_ap_ECEstNoAprobada" style="display: none;">CheckBox1</label><input type="checkbox" id="mc_info_rs_ap_ECEstNoAprobada" value="1" name="{EstNoAprobada_Name}" {EstNoAprobada}></td>
                 </tr>
  
                 <tr class="Controls">
@@ -1100,7 +1100,7 @@ jQuery(function ($) {
  
                 <tr class="Controls">
                   <td class="th">Tiempo en espera de información</td> 
-                  <td>&nbsp;<label style="display: none;" for="mc_info_rs_ap_ECDHoraSAT">TextBox1</label><input type="text" id="mc_info_rs_ap_ECDHoraSAT" style="HEIGHT: 22px; WIDTH: 39px" size="1" value="{DHoraSAT}" name="{DHoraSAT_Name}"><label style="display: none;" for="mc_info_rs_ap_ECDMinSAT">TextBox2</label><input type="text" id="mc_info_rs_ap_ECDMinSAT" style="HEIGHT: 22px; WIDTH: 37px" size="1" value="{DMinSAT}" name="{DMinSAT_Name}"><label style="display: none;" for="mc_info_rs_ap_ECDSegSAT">TextBox3</label><input type="text" id="mc_info_rs_ap_ECDSegSAT" style="HEIGHT: 22px; WIDTH: 37px" size="1" value="{DSegSAT}" name="{DSegSAT_Name}"><input type="hidden" id="mc_info_rs_ap_ECHorasSAT" value="{HorasSAT}" name="{HorasSAT_Name}"></td>
+                  <td>&nbsp;<label for="mc_info_rs_ap_ECDHoraSAT" style="display: none;">TextBox1</label><input type="text" id="mc_info_rs_ap_ECDHoraSAT" style="HEIGHT: 22px; WIDTH: 39px" size="1" value="{DHoraSAT}" name="{DHoraSAT_Name}"><label for="mc_info_rs_ap_ECDMinSAT" style="display: none;">TextBox2</label><input type="text" id="mc_info_rs_ap_ECDMinSAT" style="HEIGHT: 22px; WIDTH: 37px" size="1" value="{DMinSAT}" name="{DMinSAT_Name}"><label for="mc_info_rs_ap_ECDSegSAT" style="display: none;">TextBox3</label><input type="text" id="mc_info_rs_ap_ECDSegSAT" style="HEIGHT: 22px; WIDTH: 37px" size="1" value="{DSegSAT}" name="{DSegSAT_Name}"><input type="hidden" id="mc_info_rs_ap_ECHorasSAT" value="{HorasSAT}" name="{HorasSAT_Name}"></td>
                 </tr>
  
                 <tr class="Controls">
@@ -1130,12 +1130,24 @@ jQuery(function ($) {
  
                 <tr class="Controls">
                   <td class="th">URL de evidencia de medición</td> 
-                  <td><label style="display: none;" for="mc_info_rs_ap_ECURLEvidenciaMed">TextBox1</label><input type="text" id="mc_info_rs_ap_ECURLEvidenciaMed" size="50" value="{URLEvidenciaMed}" name="{URLEvidenciaMed_Name}"></td>
+                  <td><label for="mc_info_rs_ap_ECURLEvidenciaMed" style="display: none;">TextBox1</label><input type="text" id="mc_info_rs_ap_ECURLEvidenciaMed" size="50" value="{URLEvidenciaMed}" name="{URLEvidenciaMed_Name}"></td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th">&nbsp;</td> 
-                  <td>&nbsp;<input type="hidden" id="mc_info_rs_ap_EChdUsrUltMod" value="{hdUsrUltMod}" name="{hdUsrUltMod_Name}"><label style="display: none;" for="mc_info_rs_ap_EChdFechaUltMod">hdFechaUltMod</label><input type="hidden" id="mc_info_rs_ap_EChdFechaUltMod" value="{hdFechaUltMod}" name="{hdFechaUltMod_Name}"></td>
+                  <td>&nbsp;<input type="hidden" id="mc_info_rs_ap_EChdUsrUltMod" value="{hdUsrUltMod}" name="{hdUsrUltMod_Name}"><label for="mc_info_rs_ap_EChdFechaUltMod" style="display: none;">hdFechaUltMod</label><input type="hidden" id="mc_info_rs_ap_EChdFechaUltMod" value="{hdFechaUltMod}" name="{hdFechaUltMod_Name}"></td>
+                </tr>
+ 
+                <tr class="Controls">
+                  <td class="th">&nbsp;<label for="mc_info_rs_ap_ECevidencia_salvedad_HE" style="display: block;">Evidencia de salvedad<br>
+                    Herramienta Estimación</label><input type="checkbox" id="mc_info_rs_ap_ECevidencia_salvedad_HE" value="1" name="{evidencia_salvedad_HE_Name}" {evidencia_salvedad_HE}></td> 
+                  <td>&nbsp;<label for="mc_info_rs_ap_ECobservacion_salvedad_HE" style="display: block;">Observaciones</label> <textarea id="mc_info_rs_ap_ECobservacion_salvedad_HE" rows="3" cols="50" name="{observacion_salvedad_HE_Name}">{observacion_salvedad_HE}</textarea></td>
+                </tr>
+ 
+                <tr class="Controls">
+                  <td class="th">&nbsp;<label for="mc_info_rs_ap_ECevidencia_salvedad_RS" style="display: block;">Evidencia de salvedad<br>
+                    Requisitos de servicio </label><input type="checkbox" id="mc_info_rs_ap_ECevidencia_salvedad_RS" value="1" name="{evidencia_salvedad_RS_Name}" {evidencia_salvedad_RS}></td> 
+                  <td>&nbsp;<label for="mc_info_rs_ap_ECobservacion_salvedad_RS" style="display: block;">Observaciones</label> <textarea id="mc_info_rs_ap_ECobservacion_salvedad_RS" rows="3" cols="50" name="{observacion_salvedad_RS_Name}">{observacion_salvedad_RS}</textarea></td>
                 </tr>
  
                 <tr class="Bottom">
