--- a/TableroSLAs/PPMCsCrCalCodDetalle.html
+++ b/TableroSLAs/PPMCsCrCalCodDetalle.html
@@ -108,6 +108,11 @@
                   <td><textarea id="mc_info_rs_CCObservaciones" rows="3" cols="50" name="{Observaciones_Name}">{Observaciones}</textarea>&nbsp; </td>
                 </tr>
  
+                <tr class="Controls">
+                  <td class="th">&nbsp;<label for="mc_info_rs_CCevidencia_salvedad" style="display: block;">Evidencia de</br> salvedad </label><input type="checkbox" id="mc_info_rs_CCevidencia_salvedad" value="1" name="{evidencia_salvedad_Name}" {evidencia_salvedad}></td> 
+                  <td>&nbsp;<label for="mc_info_rs_CCobservacion_salvedad" style="display: block;">Observaciones de evidencia de salvedad</label> <textarea id="mc_info_rs_CCobservacion_salvedad" rows="3" cols="50" name="{observacion_salvedad_Name}">{observacion_salvedad}</textarea></td>
+                </tr>
+ 
                 <tr class="Bottom">
                   <td style="TEXT-ALIGN: right" colspan="2">
                     <p>
